fixed calculator height stretching

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ html {
     margin-bottom: 5%;
     margin-top: 5%;
     width: 25%;
-    height: 100%;
+    height: 650px;
 }
 .calcButton {
     border-radius: 5%;
